<resources>
    <string name="app_name">Hannah App</string>
    <string name="txt_username">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_olvide_mi_contrase">Olvide mi contraseña</string>
    <string name="btn_txt_entrar">ENTRAR</string>
    <string name="btn_txt_registrarme">REGISTRARME</string>
    <string name="rueda">rueda</string>
    <string name="bateria">bateria</string>
    <string name="luces">luces</string>
    <string name="frenos">frenos</string>
    <string name="catalizador">Sistema de escape y catalizadores</string>
    <string name="amortiguador">amortiguadores</string>
    <string name="aceite_lubricante">aceite lubricante</string>
    <string name="filtro">filtros</string>
    <string name="correa_distribucion">correa de distribucion</string>
    <string name="title_activity_profile">activity_profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- array para recyclerView -->
    <string-array name="partes_coche">
        <item>Ruedasd</item>
        <item>bateria</item>
        <item>luces</item>
        <item>frenos</item>
        <item>Sistema de escape y catalizadores</item>
        <item>amortiguadores</item>
        <item>aceite lubricante</item>
        <item>filtros</item>
        <item>correa de distribucion</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>