<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cpUser"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginTop="286dp"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/txt_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cpPsswd"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpUser" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:onClick="signIn"
        android:text="@string/btn_txt_entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpPsswd" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_txt_registrarme"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txt_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/txt_olvide_mi_contrase"
        android:textAllCaps="false"
        android:textColor="#FF009688"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpPsswd" />

</androidx.constraintlayout.widget.ConstraintLayout>